--- a/css/tooplate-simply-amazed.css
+++ b/css/tooplate-simply-amazed.css
@@ -71,7 +71,7 @@ a:focus {
 /* <<< btn-primary >>> */
 .btn-primary {
   color: #fff;
-  background-color: #356ba2;
+  background-color: #435dd1;
   border-color: transparent;
 }
 
@@ -118,7 +118,7 @@ a:focus {
 .form-control:-ms-input-placeholder { color: white; }
 
 .form-control:focus {
-  border-bottom: 1px solid #356ba2;
+  border-bottom: 1px solid #d143c8;
   outline: 0;
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -157,7 +157,7 @@ textarea.form-control {
   right: 0;
   width: 26%;
   height: 100%;
-  background-color: #356ba2;
+  background-color: #d14c43;
   overflow-y: auto;
   z-index: 1;
   display: -webkit-box;
